--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,13 +4,14 @@ services:
       context: ./services/frontend/my-app
       dockerfile: ../Dockerfile
     ports:
-      - "3001:3000"
+      - "3001:3001"
     volumes:
       - ./services/frontend/my-app:/app
       - frontend_node_modules:/app/node_modules
     environment:
       - NODE_ENV=development
       - NEXT_PUBLIC_BACKEND_API_URL=http://localhost:8001
+      - PORT=3001
     depends_on:
       - backend
 
@@ -26,8 +27,6 @@ services:
       - ./data_dictionaries:/app/data_dictionaries
       - ./curation_instructions:/app/curation_instructions
     environment:
-      - OPENAI_API_KEY=${OPENAI_API_KEY}
-      - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY}
       - REDIS_URL=redis://redis:6379/0
     depends_on:
       - redis
@@ -42,8 +41,6 @@ services:
       - ./data_dictionaries:/app/data_dictionaries
       - ./curation_instructions:/app/curation_instructions
     environment:
-      - OPENAI_API_KEY=${OPENAI_API_KEY}
-      - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY}
       - REDIS_URL=redis://redis:6379/0
     depends_on:
       - redis
